--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@libsql/client": "^0.17.0",
     "@prisma/adapter-libsql": "^6.4.1",
     "@prisma/client": "^6.4.1",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.97.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.3.1",
     "lucide-react": "^0.575.0",
